@@ -90,4 +90,18 @@ if (!$vos) {
    &compare_output($answer,&get_logfile(1));
 }
 
+# Test that error line offset works
+
+run_make_test(q!
+all:
+	@echo hi
+	@echo there
+	@exit 1
+!,
+              '', "hi\nthere\n#MAKE#: *** [#MAKEFILE#:5: all] Error 1", 512);
+
 1;
+
+### Local Variables:
+### eval: (setq whitespace-action (delq 'auto-cleanup whitespace-action))
+### End:
